--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,127 +3,157 @@
 <head>
 <meta charset="UTF-8">
 <title>TAM</title>
-<!-- <link rel="stylesheet" href="style/normalize.css"> -->
+<link rel="stylesheet" href="style/normalize.css">
+<link rel="icon" href="img/lg.png">
+<link rel="stylesheet" href="style/animate.css">
 <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
-   <div class="main-wrapper">
-	  <header>
-	     <nav>
-	       <div class="logo"><a href="">TAM</a></div>
-	       <ul>
-	         <li><a href="">选项二</a></li>
-	         <li><a href="">选项三</a></li>
-	         <li><a href="">选项四</a></li>
-	         <li><a href="">选项八</a></li>
-	       </ul>
-	     </nav>
-	     <div class="banner">
-	        <div class="inner">
-	          <h1>The Road Not Taken</h1>
-	          <h3>by Robert Frost</h3>
-	          <p>Two roads diverged in a yellow wood,And sorry I could not travel both </p>
-	          <button>找我</button><br>
-	          <span>了解更多</span>
-	        </div>
-	     </div>
-	  </header>
-	  
-	  <section class="se-banner">
-	     <div class="wrapper">
-	       <div>
-	         <h2>一个标题</h2>
-	         <div class="hr1"></div>
-	         <p>我就是一段无聊的文字，如果管我是干什么用的，说明你更加无聊！！</p>
-	       </div>
-	       <div class="icon-group">
-	          <span class="icon">aaaa</span>
-	          <span class="icon">aaaa</span>
-	          <span class="icon">aaaa</span>
-	       </div>       
-	     </div>
-	  </section>
-	
-	  <section class="se-show">
-	    <div class="preview clearfix">
-		     <div class="pic lef">
-		      <img src="./img/pic01.jpg">
-		     </div>
-		     <div class="txt rig">
-		       <h2>US election:Anti-Trump rebellion quashed in vote</h2>
-		       <p>The movement to stop Donald Trump from gaining the Republican presidential nomination prior to the party's
-		       convention has been crushed by a vote.</p>
-		     </div>
-	    </div> 
-	    <div class="preview clearfix">
-		     <div class="txt lef">
-		       <h2>Saido Berahino:Stoke offer West Brom $20m for striker</h2>
-		       <p>Stoke have made a $20m bid for West Brom striker Saido Berahino</p>
-		     </div>
-		     <div class="pic rig">
-		      <img src="./img/pic02.jpg">
-		     </div>
-	    </div> 
-	    <div class="preview clearfix">
-		     <div class="pic lef">
-		      <img src="./img/pic03.jpg">
-		     </div>
-		     <div class="txt rig">
-		       <h2>Hamilton eyes Hungaroring record</h2>
-		       <p>Can Lewis Hamilton become Hungary GP's most successful driver and claim title lead?</p>
-		     </div>
-	    </div> 
-	  </section>
-	  
-	  <section class="se-specify">
-	     <div class="wrapper">
-	      <div class="highlights">
-	        <h2>马斯克公布特斯拉新型车计划</h2>
-	        <div class="hr2"></div>
-	        <p>根据特斯拉执行长马斯克周三公布的一项战略计划，该公司打算于未来数年退出一款及皮卡、小型运动型多用途车、大型长途运输卡车和巴士与一体的车型。
-	        马斯克称，他们认为新车型Tesla Semi将大幅减少货物运输成本，同时增加安全性和驾驶乐趣。</p>
-	      </div>
-	      <div class="card-group  clearfix">
-	        <div class="card lef">
-	           <h3>有人向我反馈了一个bug</h3>
-	           <p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5 分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
-	        </div>
-	        <div class="card rig">
-	           <h3>有人向我反馈了一个bug</h3>
-	           <p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5 分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
-	        </div>
-	        <div class="card lef">
-	           <h3>有人向我反馈了一个bug</h3>
-	           <p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5 分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
-	        </div>
-	        <div class="card rig">
-	           <h3>有人向我反馈了一个bug</h3>
-	           <p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5 分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
-	        </div>
-	        <div class="card lef">
-	           <h3>有人向我反馈了一个bug</h3>
-	           <p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5 分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
-	        </div>
-	        <div class="card rig">
-	           <h3>有人向我反馈了一个bug</h3>
-	           <p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5 分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
-	        </div>
-	      </div>
-	    </div>  
-	  </section>
-	  
-	  <footer>
-	    <ul>
-	      <li>项目一</li>
-	      <li>项目二</li>
-	      <li>项目三</li>
-	      <li>项目四</li>
-	      <li>项目五</li>
-	    </ul>
-	    <div class="copy">
-	      <span>&copy;TAM</span> 
-	    </div>
-	  </footer>
-  </div>
+	<div class="main-wrapper">
+		<header>
+			<nav>
+				<div class="logo">
+					<a href="index.html"><img src="img/logo.png"></a>
+				</div>
+				<ul>
+					<li><a href="">选项二</a></li>
+					<li><a href="">选项三</a></li>
+					<li><a href="">选项四</a></li>
+					<li id="triggerSidebar"><a href="javascript:;">侧边栏</a></li>
+				</ul>
+			</nav>
+			<div class="banner">
+				<div class="inner">
+					<h1 class="animated fadeInDown">The Road Not Taken</h1>
+					<h3 class="animated fadeInDown">by Robert Frost</h3>
+					<p class="animated fadeInUp delay-05s">Two roads diverged in a yellow wood,And sorry I could not
+						travel both</p>
+					<button>找我</button>
+					<br> <span>了解更多</span>
+				</div>
+			</div>
+		</header>
+
+		<section class="se-banner">
+			<div class="wrapper">
+				<div>
+					<h2>一个标题</h2>
+					<div class="hr1"></div>
+					<p>我就是一段无聊的文字，如果管我是干什么用的，说明你更加无聊！！</p>
+				</div>
+				<div class="icon-group">
+					<span class="icon">aaaa</span> <span class="icon">aaaa</span> <span
+						class="icon">aaaa</span>
+				</div>
+			</div>
+		</section>
+
+		<section class="se-show">
+			<div class="preview clearfix">
+				<div class="pic lef">
+					<img src="./img/pic01.jpg">
+				</div>
+				<div class="txt rig">
+					<h2>US election:Anti-Trump rebellion quashed in vote</h2>
+					<p>The movement to stop Donald Trump from gaining the
+						Republican presidential nomination prior to the party's convention
+						has been crushed by a vote.</p>
+				</div>
+			</div>
+			<div class="preview clearfix">
+				<div class="txt lef">
+					<h2>Saido Berahino:Stoke offer West Brom $20m for striker</h2>
+					<p>Stoke have made a $20m bid for West Brom striker Saido
+						Berahino</p>
+				</div>
+				<div class="pic rig">
+					<img src="./img/pic02.jpg">
+				</div>
+			</div>
+			<div class="preview clearfix">
+				<div class="pic lef">
+					<img src="./img/pic03.jpg">
+				</div>
+				<div class="txt rig">
+					<h2>Hamilton eyes Hungaroring record</h2>
+					<p>Can Lewis Hamilton become Hungary GP's most successful
+						driver and claim title lead?</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="se-specify">
+			<div class="wrapper">
+				<div class="highlights">
+					<h2>马斯克公布特斯拉新型车计划</h2>
+					<div class="hr2"></div>
+					<p>根据特斯拉执行长马斯克周三公布的一项战略计划，该公司打算于未来数年退出一款及皮卡、小型运动型多用途车、大型长途运输卡车和巴士与一体的车型。
+						马斯克称，他们认为新车型Tesla Semi将大幅减少货物运输成本，同时增加安全性和驾驶乐趣。</p>
+				</div>
+				<div class="card-group  clearfix">
+					<div class="card lef">
+						<h3>有人向我反馈了一个bug</h3>
+						<p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5
+							分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
+					</div>
+					<div class="card rig">
+						<h3>有人向我反馈了一个bug</h3>
+						<p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5
+							分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
+					</div>
+					<div class="card lef">
+						<h3>有人向我反馈了一个bug</h3>
+						<p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5
+							分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
+					</div>
+					<div class="card rig">
+						<h3>有人向我反馈了一个bug</h3>
+						<p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5
+							分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
+					</div>
+					<div class="card lef">
+						<h3>有人向我反馈了一个bug</h3>
+						<p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5
+							分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
+					</div>
+					<div class="card rig">
+						<h3>有人向我反馈了一个bug</h3>
+						<p>有人向你反馈了一个 bug。 “26 楼会议室的灯亮着。它需要被熄灭。”bug 的备注里写道“你应该能在 5
+							分钟内搞定，只要按一下开关就好了。“ 你去了 26 楼的会议室。灯的确亮着，但房间里没有灯的开关</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<div id="mask"></div>
+
+		<footer>
+			<ul>
+				<li>项目一</li>
+				<li>项目二</li>
+				<li>项目三</li>
+				<li>项目四</li>
+				<li>项目五</li>
+			</ul>
+			<div class="copy">
+				<span>&copy;TAM</span>
+			</div>
+		</footer>
+	</div>
+
+	<div id="sidebar">
+		<ul>
+			<li><a href="">Item1</a></li>
+			<li><a href="">Item1</a></li>
+			<li><a href="">Item1</a></li>
+			<li><a href="">Item1</a></li>
+			<li><a href="">Item1</a></li>
+		</ul>
+	</div>
+
+	<button id="back-to-top">返回顶部</button>
+
+	<script src="js/jquery-3.0.0.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
