--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,18 +10,8 @@
 </head>
 <body>
 	<div class="main-wrapper">
+	    <div id='head_included'></div>
 		<header>
-			<nav>
-				<div class="logo">
-					<a href="index.html"><img src="img/logo.png"></a>
-				</div>
-				<ul>
-					<li><a href="">选项二</a></li>
-					<li><a href="">选项三</a></li>
-					<li><a href="">选项四</a></li>
-					<li id="triggerSidebar"><a href="javascript:;">侧边栏</a></li>
-				</ul>
-			</nav>
 			<div class="banner">
 				<div class="inner">
 					<h1 class="animated fadeInDown">The Road Not Taken</h1>
